Attempted Fix of Overflow

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -10,10 +10,12 @@ body {
     height: 100vh;
     padding: 0;
     margin: 0;
+    overflow: hidden;
 }
 
 #root {
     width: 100vw;
     height: 100vh;
     background: var(--background-color);
+    overflow: hidden;
 }
